Versão 2.3 (14/01/2024):
- Adicionado agregadores 'NicoManga', 'Momo no Hana' e 'Manhastro'.
- Pequenas correções.

Versão 2.2 (22/12/2023 — 28/12/2023):
- Adicionado o uso de perfil.
- Melhorias e correções em todos os agregadores.

Versão 2.1 (20/12/2023):
- Melhorias foram feitas nos agregadores 'Flower Mangá', 'Hentai Teca' e 'Tsuki'.
- Correções foram feitas.

Versão 2.0 (19/12/2023):
- Agregador 'Hentai Teca' foi adicionada.

Versão 1.9 (15/12/2023 — 17/12/2023):
- Atualização na GUI.
- Atualização no agregador 'BR Mangás'.

Versão 1.8 (11/12/2023):
- Pequena mudança no agregador 'SlimeRead'.
- Correção nas mensagens de erro.

Versão 1.7 (10/12/2023):
- Pequenas correções.
- Agregador 'Flower manga' corrigido.

Versão 1.6 (24/11/2023):
- Código reformulado.
- Bug's corrigidos.
- Correção no agregador 'BR Mangás'.

Versão 1.5 (30/11/2023):
- Correção feita no agregador 'BR Mangás'.
- Melhoria ao carregar o script do Tampermonkey.
- Cores adicionados no prompt.

Versão 1.4 (29/11/2023):
- Melhoria na velocidade de obter capítulos no agregador 'Tsuki'.
- Corrigido erro de perfil.

Versão 1.3 (25/11/2023):
- Adicionado ChangeLog.
- Correção feita no agregador 'BR Mangás'.
- Melhoria na velocidade de download no agregador 'Tsuki'.

Versão 1.2 (22/11/2023):
- Correção no download de capítulos no agregador 'Tsuki'.

Versão 1.1 (25/10/2023):
- Correções de bugs e melhorias de desempenho.
- Agregadores adicionados.

Versão 1.0 (21/10/2023):
- Primeira versão do Mangá Downloader.