@@ -1,9 +1,15 @@
 import os
+import re
 import sys
 import requests
 import subprocess
 from tkinter import messagebox
 
+# URL do instalador do ImageMagick
+url = 'https://github.com/OneDefauter/Menu_/releases/download/Req/ImageMagick-7.1.1-26-Q16-HDRI-x64-dll.exe'
+
+# Versão
+required_version = '7.1.1-26'
 
 
 def verify():
@@ -33,13 +39,9 @@ def verify():
     return False
 
 
-
 def download():
     messagebox.showinfo("Instalação do ImageMagick", "ImageMagick não está instalado.\nBaixando e instalando o ImageMagick...")
     
-    # URL do instalador do ImageMagick
-    url = 'https://github.com/OneDefauter/Menu_/releases/download/Req/ImageMagick-7.1.1-21-Q16-HDRI-x64-dll.exe'
-
     temp_folder = os.environ['TEMP']
     installer_path = os.path.join(temp_folder, 'ImageMagick-Installer.exe')
 
@@ -48,7 +50,7 @@ def download():
         f.write(response.content)
 
     # Instalar o ImageMagick usando subprocess
-    subprocess.run([installer_path, '/VERYSILENT'])
+    subprocess.run([installer_path, '/VERYSILENT', '/SUPPRESSMSGBOXES'])
         
     os.remove(installer_path)
     messagebox.showinfo("Instalação concluída", "ImageMagick instalado com sucesso.")
@@ -56,7 +58,51 @@ def download():
     sys.exit()
 
 
+def get_installed_version():
+    # Comando para obter a versão instalada do ImageMagick
+    command = 'magick --version'
+
+    try:
+        # Executar o comando e capturar a saída
+        output = subprocess.check_output(command, shell=True, text=True)
+
+        # Extrair a parte relevante da saída usando expressões regulares
+        version_match = re.search(r'Version: ImageMagick (\S+)', output)
+        if version_match:
+            installed_version_str = version_match.group(1)
+            return installed_version_str
+        else:
+            return None
+        
+    except subprocess.CalledProcessError:
+        # Se o comando falhar, assumimos que o ImageMagick não está instalado
+        return None
+
+
+def version_to_tuple(version_str):
+    # Função para converter a versão em uma tupla de números inteiros
+    return tuple(map(int, re.findall(r'\d+', version_str)))
+
+
+def compare_versions(installed_version, required_version):
+    # Converter as versões para tuplas de números inteiros
+    installed_version_tuple = version_to_tuple(installed_version)
+    required_version_tuple = version_to_tuple(required_version)
+
+    # Comparar as versões
+    return installed_version_tuple >= required_version_tuple
+
 
 def setup():
     if not verify():
         download()
+    
+    installed_version = get_installed_version()
+    
+    if installed_version:
+        print(f"Versão instalada do ImageMagick: {installed_version}")
+
+        if not compare_versions(installed_version, required_version):
+            print("A versão instalada está desatualizada. Baixando e instalando nova versão do ImageMagick...")
+            download()
+    
