@@ -1,3 +1,8 @@
+Versão 2.4 (15/01/2024):
+- Adicionado atualização para ImageMagick.
+- Corrigido bug ao cortar imagens.
+- Adicionado verificação de imagem.
+
 Versão 2.3 (14/01/2024):
 - Adicionado agregadores 'NicoManga', 'Momo no Hana' e 'Manhastro'.
 - Pequenas correções.
